# s3d

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
include/: matrix.hpp  s3d.hpp  scene.hpp  utils.hpp
shaders/: test.frag  test.vert
src/: CMakeLists.txt  indexed_list.cpp  indexed_list.hpp  matrix.cpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  utils.cpp  utils.hpp
